add email sender for each form-contact validation with emailjs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 PORT = votre port.
 DB_CONNECTION = postgres://user:password@localhost:5432/mydatabase
+EMAILJS_SERVICE_ID = votre service_id
+EMAILJS_TEMPLATE_ID= votre template_id
+EMAILJS_PUBLIC_KEY= votre public_key
