--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/O-clock-Cambridge/SB04-projet-ocoffee-TonySaes#readme",
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
