intialize express-session

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DB_CONNECTION = postgres://user:password@localhost:5432/mydatabase
 EMAILJS_SERVICE_ID = votre service_id
 EMAILJS_TEMPLATE_ID= votre template_id
 EMAILJS_PUBLIC_KEY= votre public_key
+SESSION_SECRET= votre clé secrète de session
