--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ EMAILJS_SERVICE_ID = votre service_id
 EMAILJS_TEMPLATE_ID= votre template_id
 EMAILJS_PUBLIC_KEY= votre public_key
 SESSION_SECRET= votre clé secrète de session
+ADMIN_USER= votre nom d'utilisateur admin
+ADMIN_PASSWORD= votre mot de passe admin
