--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "test": "NODE_ENV=test jest",
+    "dev": "node --watch server.js"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,8 @@
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
